--- a/src/app/myProfile/myProfile.component.html
+++ b/src/app/myProfile/myProfile.component.html
@@ -1,21 +1,19 @@
-<section fxLayout fxLayoutAlign="center" >
+<section fxLayout fxLayoutAlign="center">
   <mat-card class="example-card" fxFlex.xs="100%" fxFlex="400px">
-    <mat-card-header >
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title fxLayoutAlign="center">Shiba Inu</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+    <mat-card-header>
+      <img mat-card-avatar src="assets/images/princess-bubblegum.png">
+      <mat-card-title fxLayoutAlign="center">Princess Bubblegum</mat-card-title>
+      <mat-card-subtitle>P.B.</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
     <mat-card-content fxLayoutAlign="center">
-      <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
-      </p>
+      <img
+        mat-card-image
+        src="assets/images/princessBubblegumKiss.png"
+      />
     </mat-card-content>
     <mat-card-actions>
       <button mat-button>LIKE</button>
       <button mat-button>SHARE</button>
     </mat-card-actions>
   </mat-card>
-  </section>
+</section>
